FOSS-INTRO cleanup with cdn

--- a/workshop/foss-intro/demo.md.html
+++ b/workshop/foss-intro/demo.md.html
@@ -1,16 +1,16 @@
 <meta charset="utf-8" lang="en">
 
 **Towards an Open future: Navigating education with Free and Open-Source Software**
-    Alan CASTELLINO - MSc SmartEdTech
+Alan CASTELLINO - MSc SmartEdTech
 
 <hr class="ignore">
 
 ---
 
 <div class="slide-center">
-> "Universities and schools of all levels should use exclusively Free Software."
->
->      -- Richard M. Stallman
+  > "Universities and schools of all levels should use exclusively Free Software."
+  >
+  > -- Richard M. Stallman
 </div>
 
 ---
@@ -18,7 +18,7 @@
 ## Learning objective
 
 <div class="slide-center-with-title">
-There is another digital education possible. You are here to help reveal and design it.
+  There is another digital education possible. You are here to help reveal and design it.
 </div>
 
 ---
@@ -39,7 +39,8 @@ There is another digital education possible. You are here to help reveal and des
 - We are not experts. We are just sharing some findings and ideas.
 - FOSS is not the solution to everything.
 - You may feel overwhelmed. Our goal is to make you reflect, not that you recall everything.
-- This workshop may ultimately disrupt your views about education. But you are Smarties so no worries about your open-mindedness 😎
+- This workshop may ultimately disrupt your views about education. But you are Smarties so no worries about your
+open-mindedness 😎
 
 ---
 
@@ -48,12 +49,12 @@ There is another digital education possible. You are here to help reveal and des
 1. Key concepts about FOSS and FOSS in education
 2. Using FOSS everyday: practical activities
 3. Workshops for acquiring new skills
-    1. Workshop #1
-      - The power of plain text
-      - AppInventor: Scratch for the mobile generation
-    2. Workshop #2
-      - Authoring learning content
-      - Leverage FOSS in your own context
+1. Workshop #1
+- The power of plain text
+- AppInventor: Scratch for the mobile generation
+2. Workshop #2
+- Authoring learning content
+- Leverage FOSS in your own context
 4. Bigger ideas & wrap-up
 
 ---
@@ -72,7 +73,7 @@ Why care about FOSS as citizens, just citizens?
 - Reflect on the following question and take some notes
 
 <center>
-**How did your digital practices evolve through time?**
+  **How did your digital practices evolve through time?**
 </center>
 
 We will have a common discussion afterwards.
@@ -84,7 +85,8 @@ We will have a common discussion afterwards.
 - EU approves €2.4 billion fine against Google for abuse of dominant position. (*Le Monde*, 2021/11/10)
 - CNIL fines Google €50 million for non conformity with GDPR ("Que Choisir?", 2019/01/27)
 - CNIL fines Microsoft €60 million for not allowing users to refuse cookies ("Le Monde", 2022/12/22)
-- Germany bans Windows and Microsoft Office from schools because they spy on students' data from the US ("It-Connect", 2019/07/21)
+- Germany bans Windows and Microsoft Office from schools because they spy on students' data from the US ("It-Connect",
+2019/07/21)
 
 Issues: privacy, souvereignty, interoperability, obsolescence...
 
@@ -94,9 +96,12 @@ Issues: privacy, souvereignty, interoperability, obsolescence...
 
 ## ... to the point of *surveillence capitalism*
 
-> "The digital industry prospers thanks to an almost childlike principle: extract personal data and sell predictions of user behavior to advertisers. But for profits to grow prognosis must become certainty. To achieve this, it's no longer enough to simply predict: it's now a matter of modifying behaviour on a large scale. of modifying human behavior on a massive scale."
+> "The digital industry prospers thanks to an almost childlike principle: extract personal data and sell predictions of
+user behavior to advertisers. But for profits to grow prognosis must become certainty. To achieve this, it's no longer
+enough to simply predict: it's now a matter of modifying behaviour on a large scale. of modifying human behavior on a
+massive scale."
 >
->         -- Shoshana Zuboff
+> -- Shoshana Zuboff
 
 in *Le Monde Diplomatique*, 2019/01 (free translation)
 
@@ -124,11 +129,11 @@ in *Le Monde Diplomatique*, 2019/01 (free translation)
 
 *******************
 * .-------------. *
-*|Free to use    |*
+*|Free to use |*
 *|---------------|*
-*|Free to study  |*
+*|Free to study |*
 *|---------------|*
-*|Free to copy   |*
+*|Free to copy |*
 *|---------------|*
 *|Free to modify |*
 * '-------------' *
@@ -153,12 +158,12 @@ in *Le Monde Diplomatique*, 2019/01 (free translation)
 
 - FOSS comes with a Free License
 - FOSS principles beyond software
-  - Creative commons
-  - *Commons Based Peer Production* (CBPP): Wikipedia, OpenStreetMap, OpenFoodFacts...
+- Creative commons
+- *Commons Based Peer Production* (CBPP): Wikipedia, OpenStreetMap, OpenFoodFacts...
 
 - FOSS is aligned with core values:
-  - Technical: longevity, interoperability, decentralization, freedom of choice...
-  - Philosophical: openness, communonality, ethics, independance, sharing, diversity, sovereignty...
+- Technical: longevity, interoperability, decentralization, freedom of choice...
+- Philosophical: openness, communonality, ethics, independance, sharing, diversity, sovereignty...
 
 ---
 
@@ -185,17 +190,17 @@ in *Le Monde Diplomatique*, 2019/01 (free translation)
 ## Where do we stand today?
 
 <center>
-![Gardner's hype cycle](gardner.png width=60%)
+  ![Gardner's hype cycle](gardner.png width=60%)
 </center>
 
 ---
 
 ## Concrete example: students learning online (G. Attwell)
 
-**Personal Learning Environment**      |**Virtual Learning Environment**
+**Personal Learning Environment** |**Virtual Learning Environment**
 ---------------------------------------|--------------------------------
-Created by the learner                 |Operated by the institution
-Centered around the learner            |Geared towards expected results
+Created by the learner |Operated by the institution
+Centered around the learner |Geared towards expected results
 Aims at learners empowerment through IT|Aims at controlling learning
 
 ---
@@ -203,9 +208,10 @@ Aims at learners empowerment through IT|Aims at controlling learning
 ## Reviving an age-old debate
 
 <div class="slide-center-with-title">
-> "[T]here was a failure to understand the role of technology in the growing commodification and managerialism in education."
->
->      -- Graham Attwell (2023)
+  > "[T]here was a failure to understand the role of technology in the growing commodification and managerialism in
+  education."
+  >
+  > -- Graham Attwell (2023)
 </div>
 
 Mechanistic vs holistic approach to education
@@ -215,11 +221,12 @@ Mechanistic vs holistic approach to education
 ## Key issues in digital education
 
 <center>
-Should digital technologies be a means of empowering students or monitoring them?
+  Should digital technologies be a means of empowering students or monitoring them?
 
-Should the use of digital technologies benefit only a few major companies?
+  Should the use of digital technologies benefit only a few major companies?
 
-Should the implementation of digital education be based on top-down policies or foster distributed expertise and local initiatives?
+  Should the implementation of digital education be based on top-down policies or foster distributed expertise and local
+  initiatives?
 </center>
 
 ---
@@ -231,19 +238,19 @@ Should the implementation of digital education be based on top-down policies or 
 ## FOSS in education: what for?
 
 ********************************************************************************
-*                                                                              *
-* .---------------------------.    .---------------.    .-------------------.  *
-*|        For learners         |  |  For teachers   |  |For the EdTech sector| *
-* '-------------+-------------'    '-------+-------'    '----------+--------'  *
-*               |                          |                       |           *
-*               v                          v                       v           *
-*.-----------------------------.  .-----------------.  .---------------------. *
-*|New pedagogical approaches   |  |Knowledge sharing|  |Overcoming structural| *
-*|-----------------------------|  |-----------------|  |divide between users | *
-*|Personalized learning paths  |  |Collaboration    |  |and developers       | *
-*|-----------------------------|  '-----------------'  '---------------------' *
-*|Enhanced learners' voice     |                                               *
-*'-----------------------------'                                               *
+* *
+* .---------------------------. .---------------. .-------------------. *
+*| For learners | | For teachers | |For the EdTech sector| *
+* '-------------+-------------' '-------+-------' '----------+--------' *
+* | | | *
+* v v v *
+*.-----------------------------. .-----------------. .---------------------. *
+*|New pedagogical approaches | |Knowledge sharing| |Overcoming structural| *
+*|-----------------------------| |-----------------| |divide between users | *
+*|Personalized learning paths | |Collaboration | |and developers | *
+*|-----------------------------| '-----------------' '---------------------' *
+*|Enhanced learners' voice | *
+*'-----------------------------' *
 ********************************************************************************
 
 <small>The potential of open source approaches for education, FUTURELAB (2006)</small>
@@ -258,7 +265,7 @@ Should the implementation of digital education be based on top-down policies or 
 
 ---
 
-## Addressing the structural divide 
+## Addressing the structural divide
 
 ---
 
@@ -330,17 +337,17 @@ We will ask some groups for a quick presentation of what they did
 *.---------------------------------------.*
 *|Level 1: substitute your current tools |*
 *'-------------------+-------------------'*
-*                    |                    *                    
-*                    |                    *
-*                    v                    *
+* | *
+* | *
+* v *
 *.---------------------------------------.*
 *|Level 2: adopt and foster new practices|*
 *'-------------------+-------------------'*
-*                    |                    *                    
-*                    |                    *
-*                    v                    *
+* | *
+* | *
+* v *
 *.---------------------------------------.*
-*|Level 3: build up your digital world   |*
+*|Level 3: build up your digital world |*
 *'---------------------------------------'*
 *******************************************
 
@@ -373,11 +380,12 @@ We will ask some groups for a quick presentation of what they did
 
 # Bigger ideas & wrap-up
 
-Going further: devoloping situted tools
+Going further: developing suited tools
 
-TiddlyWiki: designing knowledge management processes through customizing a mealleable software tool
+TiddlyWiki: designing knowledge management processes through customizing a malleable software tool
 
-Adressing challenges with a twofold approach, taking into account students' need and personal convictions: a peek at practices of a seasoned open source developer
+Addressing challenges with a twofold approach, taking into account students' need and personal convictions: a peek at
+practices of a seasoned open source developer
 
 ---
 
@@ -386,32 +394,48 @@ Adressing challenges with a twofold approach, taking into account students' need
 
 <!-- Markdeep slides stuff -->
 <script>
-    markdeepSlidesOptions = {
-        aspectRatio: 16 / 9,
-        theme: 'simple',
-        fontSize: 28,
-        diagramZoom: 1.0,
-        totalSlideNumber: false,
-        progressBar: true,
-        breakOnHeadings: false,
-        slideChangeHook: (oldSlide, newSlide) => {},
-        modeChangeHook: (newMode) => {}
-    };
+  markdeepSlidesOptions = {
+    aspectRatio: 16 / 9,
+    theme: 'simple',
+    fontSize: 28,
+    diagramZoom: 1.0,
+    totalSlideNumber: false,
+    progressBar: true,
+    breakOnHeadings: false,
+    slideChangeHook: (oldSlide, newSlide) => { },
+    modeChangeHook: (newMode) => { }
+  };
 </script>
-<link rel="stylesheet" href="markdeep-slides/lib/markdeep-relative-sizes/1.11/relativize.css">
-<link rel="stylesheet" href="markdeep-slides/markdeep-slides.css">
-<script src="markdeep-slides/markdeep-slides.js"></script>
+<link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/gh/vicramgonus/markdeep-slides-master/markdeep-slides/lib/markdeep-relative-sizes/1.11/relativize.css">
+<link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/gh/vicramgonus/markdeep-slides-master/markdeep-slides/markdeep-slides.css">
+<script
+  src="https://cdn.jsdelivr.net/gh/vicramgonus/markdeep-slides-master/markdeep-slides/markdeep-slides.js"></script>
 
 <!-- Markdeep stuff -->
 <script>
-    markdeepOptions = {
-        tocStyle: 'none',
-        detectMath: false,
-        onLoad: function() {
-            initSlides();
-        }
-    };
+  markdeepOptions = {
+    tocStyle: 'none',
+    detectMath: false,
+    onLoad: function () {
+      initSlides();
+    }
+  };
 </script>
-<style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style>
-<script src="markdeep-slides/lib/markdeep/1.11/markdeep.min.js" charset="utf-8"></script>
-<script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
+<style class="fallback">
+  body {
+    visibility: hidden;
+    white-space: pre;
+    font-family: monospace
+  }
+</style>
+<!-- <script src="https://cdn.jsdelivr.net/gh/morgan3d/markdeep/1.16/markdeep.min.js"></script> -->
+<script
+  src="https://cdn.jsdelivr.net/gh/vicramgonus/markdeep-slides-master/markdeep-slides/lib/markdeep/1.11/markdeep.min.js"
+  charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_SVG"></script>
+<link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/gh/vicramgonus/markdeep-slides-master/markdeep-slides/themes/simple.css">
+<!-- theme non changeabla -->
+<script>window.alreadyProcessedMarkdeep || (document.body.style.visibility = "visible")</script>
